# src/api/endpoints.ts
@@ -1,4 +1,5 @@
 export const endpoints = {
+  contactRequests: "/contact-requests",
   manufacturers: "/manufacturers",
   products: "/products",
   product: (id: string) => "/products/" + encodeURIComponent(id),
